--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
-    <p><h4><b><center>By selecting a volunteer from the subject id drop-down menu, we can build interactive charts and visualize the data of bacterial culture collected from volunteer's belly button. </h3></center></b><br></p>
+    <p><h4><b><center>Biological researchers are experimenting to synthecize protein which tastes like beef from bacterial culture found in a human's belly button. For this, data has been collected from volunteers from various age group and ethnicity. Sample data includes type of bacteria, quantity of each bacteria, bacteria label and the frequency of washing the sample area has been collected. By selecting a volunteer from the subject id drop-down menu, we can build interactive charts and visualize the data.</h3></center></b><br></p>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
